Fixed front page spacing

--- a/src/components/HotBid/HotBid.module.sass
+++ b/src/components/HotBid/HotBid.module.sass
@@ -2,6 +2,7 @@
 
 .section
     overflow: hidden
+    margin-bottom: 64px
 
 .wrapper
     position: relative
